--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <div id="root" class="bg-gray-300"></div>
+  <div id="root" class="bg-gray-300 p-4"></div>
 </body>
 
 </html>
